--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100&family=Viaoda+Libre&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
